<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/multiple_lens_camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/multiple_lens_camera_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_video_stream_source"
                style="@style/common_button"
                android:text="@string/video_stream_source" />

            <Button
                android:id="@+id/btn_laser_enabled"
                style="@style/common_button"
                android:text="@string/laser_enabled" />

            <Button
                android:id="@+id/btn_flat_camera_mode"
                style="@style/common_button"
                android:text="@string/flat_camera_mode" />

            <Button
                android:id="@+id/btn_hybrid_zoom_spec"
                style="@style/common_button"
                android:text="@string/hybrid_zoom_spec" />

            <Button
                android:id="@+id/btn_infrared_thermal_camera_shutter_enabled"
                style="@style/common_button"
                android:text="@string/infrared_thermal_camera_shutter_enabled" />


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/video_feed_title"
            style="@style/test_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/primary_camera" />

        <TextView
            android:id="@+id/video_stream_source_title"
            style="@style/test_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/main_lens" />

        <TextView
            android:id="@+id/laser_information_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/laser_information" />

        <FrameLayout
            android:layout_width="480dp"
            android:layout_height="280dp">

            <com.dji.sdk.sample.internal.utils.VideoFeedView
                android:id="@+id/primary_video_feed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />
        </FrameLayout>

    </LinearLayout>

</merge>
